fixing spacing issue on company section

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -32,7 +32,6 @@ html {
     height: 800px;
     font-family: 'Manrope', sans-serif;
     text-align: center;
-    box-sizing: border-box;
     display: inline;
 }
 
@@ -203,10 +202,8 @@ html {
 
 /* main sections */
 main {
-   /* position: re; */
-   /* top: 40rem; */
    width: 80%;
-   margin: 65rem auto;
+   margin: 65rem auto 10rem auto;
    font-family: 'Manrope', sans-serif;
 }
 
@@ -346,6 +343,14 @@ main {
     height: 400px;
 }
 
+/* PROFILE */
+.profile {
+    height: 400px;
+    margin-top: 9rem;
+    border: 4px solid var(--main-bg);
+}
+
+
 /* FOOTER */
 .footer {
     background: var(--second-bg);
@@ -427,22 +432,27 @@ main {
 
 
 @media screen and (max-width: 428px) {
+
     .jumbotron-details {
         margin-left: 0 !important;
     }
 
+    .jumbotron-details h1 {
+        min-width: 300px;
+        font-size: 10vmin !important;
+    }
+
     .jumbotron-details p {
-        font-size: 1.2rem !important;
+        font-size: 1.1rem !important;
+        min-width: 300px;
     }
 
     .header .header-chart > img {
-        margin-top: 13rem;
         width: 350px;
-        /* display: none; */
     }
-
-    .companies {
-        margin-top: -20rem !important;
+    
+    main {
+        margin-top: -233rem !important;
     }
 
     .companies-images > img {
@@ -450,14 +460,50 @@ main {
         flex-wrap: nowrap !important;
     }
 
+    .features  .feature-one .feature-details h1 {
+        max-width: 294px !important;
+    }
+
+    .features .feature-two .feature-details h1 {
+        width: 300px !important;
+    }
+
+    .services .services-details {
+        padding: 2px;
+    }
+
+    .services .services-details header {
+        padding: 18px;
+    }
+
+    .services .services-details header > h2 {
+        font-size: 7vmin;
+    }
+
+    .services .services-details-aside > img {
+        width: 280px !important;
+        height: 250px !important;
+    }
+
+    .footer {
+        margin-top: 0 !important;
+    }
+
+    .footer .footer-top > h2 {
+        font-size: 7vmin !important;
+        width: 200px !important;
+    }
+
+    .footer .footer-top > button {
+        font-size: 4.5vmin !important;
+        height: 40px !important;       
+    }
+
     .footer .footer-center {
         grid-template-columns: repeat(1, 1fr) !important;
         justify-content: space-between;
     }
 
-    .footer .footer-center-article {
-        /* width: 400px; */
-    }
     .footer .footer-center-article > p {
         width: 100%;
     }
@@ -499,7 +545,7 @@ main {
     }
 
     .features {
-        margin-top: 35rem;
+        margin-top: 30rem;
     }
 
     .features .feature-one {
@@ -510,15 +556,9 @@ main {
         width: 400px;
     }
 
-    .features .feature-two .feature-details  {
-        width: 300px;
-        margin-right: 4rem;
+    .features .feature-one .feature-details > h1  {
+        width: 350px;
     }
-    
-     .features .feature-two .feature-details h1 {
-        width: 150px;
-        /* height: 100px; */
-     }
 
     .features .feature-details {
         margin-top: 4rem;
@@ -535,7 +575,7 @@ main {
 
     .services-details header {
         flex-direction: column;
-        height: 250px;
+        height: 150px;
         width: 100%;
         align-items: flex-start;
         justify-content: space-between;
@@ -554,13 +594,8 @@ main {
         width: 300px;
     }
 
-    .services-details header {
-        margin-bottom: 13rem;
-    }
-
     .services-details header > h2 {
         font-size: var(--font-md);
-        width: 200px !important;
     }
 
     .services-details header > button {
@@ -573,6 +608,10 @@ main {
         margin-top: 50rem !important;
     }
 
+    .footer .footer-top > h2 {
+        font-size: 8vmin;
+        width: 300px;
+    }
 
 }
 
@@ -602,9 +641,20 @@ main {
        display: block;
     }
 
+    main {
+        margin-top: 24rem !important;
+    }
 
     .features .feature-one, .feature-two {
         flex-direction: column;
+    }
+
+    .services-details header h2 {
+        max-width: 250px !important;
+    }
+
+    .services-details header > button {
+        padding: 10px;
     }
 
     .services-details aside {
@@ -639,8 +689,13 @@ main {
         margin-top: 2rem;
     }
 
+    main {
+        /* margin-top: 54rem; */
+        /* margin-bottom: 35rem; */
+    }
+
     .companies {
-        margin-top: -10rem;
+        margin-top: 4rem;
     }
 
     .companies .companies-images {
@@ -657,10 +712,6 @@ main {
     .features .feature-two {
         display: flex;
         flex-direction: column-reverse;
-    }
-
-    .features .feature-two .feature-details {
-        margin-left: 3rem;
     }
 
     .features .feature-two .feature-details .feature-headline {
